// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionCircle DOM rendering renders correctly with default props 1`] = `
<span
  className="wrapper transparent"
>
  <span
    className=" KambiWidget-card-text-color"
  />
</span>
`;

exports[`PositionCircle DOM rendering renders correctly with given child element 1`] = `
<span
  className="wrapper transparent"
>
  <span
    className=" KambiWidget-card-text-color"
  >
    t
  </span>
</span>
`;

exports[`PositionCircle DOM rendering renders correctly with given color 1`] = `
<span
  className="wrapper KambiWidget-winPrimaryColor dark"
>
  <span
    className=" KambiWidget-winSecondaryColor"
  />
</span>
`;

exports[`PositionCircle DOM rendering renders correctly with transparent color 1`] = `
<span
  className="wrapper transparent"
>
  <span
    className=" KambiWidget-card-text-color"
  />
</span>
`;
